Kubernetes-first/186-Ingress/Ingress-Resource/ingress-wear.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  backend:
    serviceName: wear-service
    servicePort: 80


# kubectl create -f ingress-wear.yaml
# kubectl get ingress
